# crystal_mcp_server

./: .coverage  .gitignore  .mcp.json  CLAUDE_CODE_SETUP.md  FINAL_COMPREHENSIVE_TEST_REPORT.md  PROJECT_COMPLETION_REPORT.md  QUICK_START_GUIDE.md  README.md  correct_template_mcp_config.json  coverage.xml  critique_report.md  critique_report_2.md  crystal_mcp_architecture.md  crystal_mcp_plan.md  crystal_mcp_quickstart.md  crystal_viewer_threejs.tsx  debug_group.py  debug_group_attributes.py  debug_system.py  find_calculator.py  inspect_calc.py  inspect_chgnet.py  inspect_g2.py  inspect_lattice.py  inspect_libraries.py  inspect_molecule_source.py  inspect_pyxtal.py  jest.config.js  new_structure_catalogue.md  old_audit_g.md  package-lock.json  package.json  project_audit_22Dec.md  reproduce_issue.py  requirements.txt  structure_catalogue.md  test-mcp.js  test-results.xml  test-tool-format.js  test_check_compatible.py  (+12 more)
.claude/: settings.local.json
crystal-gui/: Cargo.toml  README.md
crystal-gui-web/: full_debug_log.txt  index.html  package-lock.json  package.json  playwright.config.ts  test_report.md  vite.config.ts
crystal-gui/src/: app.rs  crystal_viewer.rs  llm_client.rs  main.rs  mcp_client.rs  structure_export.rs
docs/: API.md  MCP_ARCHITECTURE.md  README.md  TOOL_REGISTRY.md  USER_MANUAL.md  api_reference.md  architecture.md  comprehensive_generator_catalog.md  connect_to_llm_agents.md  critique_fix_tasklist.md  critique_status_report.md  crystallography_guide.md  dataflow.md  developer_guide.md  expert_critique_report.md  gap_analysis_report.md  (+7 more)
(+386 files in other folders)
