[package]
name = "crystal-gui"
version = "0.1.0"
edition = "2021"
description = "Crystal Structure Generator GUI with MCP client and 3D visualization"
authors = ["Crystal MCP Team"]
license = "MIT"

[dependencies]
# GUI framework
eframe = "0.31"
egui = "0.31"
egui_extras = { version = "0.31", features = ["all_loaders"] }

# 3D rendering for crystal visualization
three-d = "0.18"
three-d-asset = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for Ollama API
reqwest = { version = "0.12", features = ["json", "blocking"] }

# JSON handling
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# MCP client (JSON-RPC over stdio)
async-process = "2"
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "2"
anyhow = "1"

# UUID for request IDs
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
